--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 <div class="btn_wrapper">
-	<a href="{% url 'group_delete' group.id %}" class="btn_big confirm">
+	<a href="{% url 'bcglab_admin:group_delete' group.id %}" class="btn_big confirm">
 		<img src="{% static 'img/icons/cross.png' %}" />Supprimer ce groupe
 	</a>
 </div>
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'group_item' group.id %}" method="POST">{% csrf_token %}
+<form action="{% url 'bcglab_admin:group_item' group.id %}" method="POST">{% csrf_token %}
 	<h3>Modification du groupe {{ group.name }}</h3>
 	<fieldset>
 		{% with form.name as field %}
