--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -39,7 +39,7 @@
 			</form>
 		</div>
 		<div id="footer">
-			<a href="{% url 'new_user' %}"> >>> Créer un compte</a>
+			<a href="{% url 'team_member:new_user' %}"> >>> Créer un compte</a>
 		</div>
 	</div>
 </div>
