--- a/templates/budget/item.html
+++ b/templates/budget/item.html
@@ -52,6 +52,6 @@
 		</fieldset>
 	{% endif %}
 	<button type="submit" class="check">Valider</button>
-	<a href="{% url 'budgets' %}" class="back">Retour</a>
+	<a href="{% url 'budget:list' %}" class="back">Retour</a>
 </form>
 {% endblock %}
