--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -17,7 +17,7 @@
 		Page {{ objects.number }} sur {{ objects.paginator.num_pages }}.
 	</h2>
 	<div class="btn_wrapper">
-		<a href="{% url 'history_orders_export' %}?{{url_args}}" class="btn_big">
+		<a href="{% url 'history:orders_export' %}?{{url_args}}" class="btn_big">
 			<img src="{% static 'img/icons/page_excel.png' %}" />Exporter vers Excel
 		</a>
 	</div>
