--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
 
 {% block header %}
 <div class="btn_wrapper">
-	<a href="{% url 'info_new' %}" class="btn_medium">
+	<a href="{% url 'infos:new' %}" class="btn_medium">
 		<img src="{% static 'img/icons/add.png' %}" />Ajouter une info
 	</a>
 </div>
@@ -28,8 +28,8 @@
 			<td>{{ info.expiry|date }}</td>
 			<td>{{ info.text|safe }}</td>
 			<td>
-				<a href="{% url 'info_item' info.id %}" class="pencil no-text"></a>
-				<a href="{% url 'info_delete' info.id %}" class="trash no-text"></a>
+				<a href="{% url 'infos:item' info.id %}" class="pencil no-text"></a>
+				<a href="{% url 'infos:delete' info.id %}" class="trash no-text"></a>
 			</td>
 		</tr>
 		{% endfor %}
