--- a/templates/preferences/change_password.html
+++ b/templates/preferences/change_password.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <form action="{% url 'change_password' %}" method="POST">{% csrf_token %}
+  <form action="{% url 'preferences:change_password' %}" method="POST">{% csrf_token %}
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
     </p>
