--- a/templates/provider/index.html
+++ b/templates/provider/index.html
@@ -29,11 +29,11 @@
                     {% if provider.reseller %}
                         {{ provider.name }} ({{ provider.product_set.all.count }} produits)
                         - Revendeur: 
-                        <a href="{% url 'product_index' %}?provider={{provider.reseller.id}}&connector=OR" class="table_go show_wait">
+                        <a href="{% url 'product:list' %}?provider={{provider.reseller.id}}&connector=OR" class="table_go show_wait">
                             {{ provider.reseller.name }}
                         </a>
                     {% else %}
-                        <a href="{% url 'product_index' %}?provider={{provider.id}}&connector=OR" class="table_go show_wait">
+                        <a href="{% url 'product:list' %}?provider={{provider.id}}&connector=OR" class="table_go show_wait">
                             {{ provider.name }}
                         </a>({{ provider.product_set.all.count }} produits)
                     {% endif %}
@@ -45,35 +45,35 @@
                     {% endif %}
                 </td>
                 <td>
-                    <button class="comment notesDialog no-text" href="{% url 'set_notes' provider.id %}" content="{{ provider.notes|default:'' }}"></button>
+                    <button class="comment notesDialog no-text" href="{% url 'provider:set_notes' provider.id %}" content="{{ provider.notes|default:'' }}"></button>
                 </td>
                 <td>
-                    <a href="{% url 'product_new' %}?provider_id={{provider.id}}" class="plus">Ajouter&nbsp;un&nbsp;produit</a>
+                    <a href="{% url 'product:new' %}?provider_id={{provider.id}}" class="plus">Ajouter&nbsp;un&nbsp;produit</a>
                     {% if user in provider.users_in_charge.all or user.is_superuser %}
                         {% if provider.is_local %}
                              {% if user|has_perm:"order.custom_view_local_provider" %}
-                                <a href="{% url 'import_products' provider.id %}" class="import">Import produits</a>
-                                <a href="{% url 'export_products' provider.id %}" class="export">Export produits</a>
-                                <a href="{% url 'provider_item' provider.id %}" class="pencil">Editer</a>
+                                <a href="{% url 'provider:import_products' provider.id %}" class="import">Import produits</a>
+                                <a href="{% url 'provider:export_products' provider.id %}" class="export">Export produits</a>
+                                <a href="{% url 'provider:item' provider.id %}" class="pencil">Editer</a>
                                 {% if provider.order_set.count == 0 %}
-                                    <a href="{% url 'provider_delete' provider.id %}" class="trash">Supprimer</a>
+                                    <a href="{% url 'provider:delete' provider.id %}" class="trash">Supprimer</a>
                                 {% endif %}
                              {% endif %}
                         {% else %}
-                            <a href="{% url 'import_products' provider.id %}" class="import">Import produits</a>
-                            <a href="{% url 'export_products' provider.id %}" class="export">Export produits</a>
-                            <a href="{% url 'provider_item' provider.id %}" class="pencil">Editer</a>
+                            <a href="{% url 'provider:import_products' provider.id %}" class="import">Import produits</a>
+                            <a href="{% url 'provider:export_products' provider.id %}" class="export">Export produits</a>
+                            <a href="{% url 'provider:item' provider.id %}" class="pencil">Editer</a>
                             {% if provider.order_set.count == 0 %}
-                                <a href="{% url 'provider_delete' provider.id %}" class="trash">Supprimer</a>
+                                <a href="{% url 'provider:delete' provider.id %}" class="trash">Supprimer</a>
                             {% endif %}
                         {% endif %}
                     {% else %}
                         {% if provider.users_in_charge.all.count == 0 and not provider.is_local %}
-                            <a href="{% url 'import_products' provider.id %}" class="import">Import produits</a>
-                            <a href="{% url 'export_products' provider.id %}" class="export">Export produits</a>
-                            <a href="{% url 'provider_item' provider.id %}" class="pencil">Editer</a>
+                            <a href="{% url 'provider:import_products' provider.id %}" class="import">Import produits</a>
+                            <a href="{% url 'provider:export_products' provider.id %}" class="export">Export produits</a>
+                            <a href="{% url 'provider:item' provider.id %}" class="pencil">Editer</a>
                             {% if provider.order_set.count == 0 %}
-                                <a href="{% url 'provider_delete' provider.id %}" class="trash">Supprimer</a>
+                                <a href="{% url 'provider:delete' provider.id %}" class="trash">Supprimer</a>
                             {% endif %}
                         {% endif %}
                     {% endif %}
@@ -93,7 +93,7 @@
 <div id="mail" class="dialog" title="Envoyer un message au(x) responsable(s)">
     <form action="{% url 'send_message' %}" method="POST">{% csrf_token %}
         <input type="hidden" name="to" value="" />
-        <input type="hidden" name="next" value="{% url 'provider_index' %}">
+        <input type="hidden" name="next" value="{% url 'provider:index' %}">
         <div class="form-row">
             <label for="subject">Sujet</label>
             <div class="cleaner"></div>
