--- a/templates/attachments/show.html
+++ b/templates/attachments/show.html
@@ -6,7 +6,7 @@
 		<td>
 			<a href="{{ MEDIA_URL }}{{attachment.attached_file}}" class="zoomin no-text"></a>
 			{% if not object|isinstance:"history.history" %}
-				<a href="{% url 'attachment_delete' attachment.id %}?next={{next}}" class="trash no-text"></a>
+				<a href="{% url 'attachments:delete' attachment.id %}?next={{next}}" class="trash no-text"></a>
 			{% endif %}
 		</td>
 	</tr>
