--- a/templates/base_products.html
+++ b/templates/base_products.html
@@ -7,14 +7,14 @@
 {% block nav_secondary %}
 <ul id="subnav">
   <li class="{% block product_list %}{% endblock %}">
-    <a href="{% url 'product_index' %}">Liste des produits</a>
+    <a href="{% url 'product:list' %}">Liste des produits</a>
   </li>
   <li class="{% block product_new %}{% endblock %}">
-    <a href="{% url 'product_new' %}">Ajouter un produit</a>
+    <a href="{% url 'product:new' %}">Ajouter un produit</a>
   </li>
   {% if user|is_admin %}
   <li class="{% block product_codes %}{% endblock product_codes %}">
-    <a href="{% url 'import_product_codes' %}">Importer des nomenclatures</a>
+    <a href="{% url 'product_code:import' %}">Importer des nomenclatures</a>
   </li>
   {% endif %}
 </ul>
