--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -7,25 +7,25 @@
 	{% if budget %}
 		{% if user|has_perm:"budget.custom_edit_budget" %}
 			<div class="btn_wrapper">
-				<a href="{% url 'debit_budget' budget.id %}" class="btn_small">
+				<a href="{% url 'budget:debit' budget.id %}" class="btn_small">
 					<img src="{% static 'img/icons/delete.png' %}" />Débiter
 				</a>
 			</div>
 			<div class="btn_wrapper">
-				<a href="{% url 'credit_budget' budget.id %}" class="btn_small">
+				<a href="{% url 'budget:credit' budget.id %}" class="btn_small">
 					<img src="{% static 'img/icons/add.png' %}" />Créditer
 				</a>
 			</div>
 		{% endif %}
 	{% endif %}
 	<div class="btn_wrapper">
-		<a href="{% url 'budgetlines' %}" class="btn_big">
+		<a href="{% url 'budget_line:list' %}" class="btn_big">
 			<img src="{% static 'img/icons/magnifier.png' %}" />Détail de tous les budgets
 		</a>
 	</div>
 	{% if url_args %}
 	<div class="btn_wrapper">
-		<a href="{% url 'budgetline_export' %}?{{url_args}}" class="btn_big">
+		<a href="{% url 'budget_line:export' %}?{{url_args}}" class="btn_big">
 			<img src="{% static 'img/icons/page_excel.png' %}" />Exporter vers Excel
 		</a>
 	</div>
@@ -90,8 +90,8 @@
 					<td><strong>{{ budget_line.get_amount_left }}</strong></td>
 					{% if user|has_perm:"budget.custom_edit_budget" %}
 						<td style="white-space:nowrap">
-							<a href="{% url 'budgetline_item' budget_line.id %}?{{url_args}}" class="pencil no-text"></a>
-							<a href="{% url 'budgetline_delete' budget_line.id %}" class="trash confirmDel no-text"></a>
+							<a href="{% url 'budget_line:item' budget_line.id %}?{{url_args}}" class="pencil no-text"></a>
+							<a href="{% url 'budget_line:delete' budget_line.id %}" class="trash confirmDel no-text"></a>
 						</td>
 					{% endif %}
 				</tr>
