--- a/templates/infos/item.html
+++ b/templates/infos/item.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'info_item' info.id %}" method="POST">{% csrf_token %}
+<form action="{% url 'infos:item' info.id %}" method="POST">{% csrf_token %}
 	<h3>Modification d'une information</h3>
 	<fieldset>
 		<label for="provider">Fournisseur</label>
@@ -21,6 +21,6 @@
 	</fieldset>
   
   <button type="submit" class="check">Valider</button>
-	<a href="{% url 'info_index' %}" class="back">Retour</a>
+	<a href="{% url 'infos:index' %}" class="back">Retour</a>
 </form>	
 {% endblock %}
