--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-<form id="productUpdateForm" action="{% url 'orderitem_detail' orderitem.id %}" method="POST">{% csrf_token %}
+<form id="productUpdateForm" action="{% url 'order:item_detail' orderitem.id %}" method="POST">{% csrf_token %}
 	<p class="instructions">
 		<em>Les champs marqués d'une étoile sont obligatoires</em>
 	</p>
@@ -29,7 +29,7 @@
 		<button type="submit" class="check">Valider</button>
 	{% endif %}
 	
-	<a href="{% url 'order_item' order.id %}" class="back">Annuler</a>
+	<a href="{% url 'order:detail' order.id %}" class="back">Annuler</a>
 	</fieldset>
 </form>
 
