--- a/templates/order/reception.html
+++ b/templates/order/reception.html
@@ -14,9 +14,9 @@
 
 {% block content %}
 {% if orderitems %}
-<form action="{% url 'do_reception' %}" method="POST">{% csrf_token %}
+<form action="{% url 'order:do_reception' %}" method="POST">{% csrf_token %}
 	<div style="float:right;margin-bottom:10px">
-		<button type="submit" class="check" url="{% url 'tab_reception' %}">Valider les quantités livrées</button>
+		<button type="submit" class="check" url="{% url 'order:tab_reception' %}">Valider les quantités livrées</button>
 	</div>
 	<div class="cleaner"></div>
 	<table class="list">
