--- a/templates/order/reception_local.html
+++ b/templates/order/reception_local.html
@@ -24,11 +24,11 @@
 
 {% block content %}
 {% if orderitems %}
-<form action="{% url 'tab_reception_local_provider' %}" method="POST">{% csrf_token %}
+<form action="{% url 'order:tab_reception_local_provider' %}" method="POST">{% csrf_token %}
     
     {% if user|has_perm:"order.custom_view_local_provider" %}
     <div style="float:right;margin-bottom:10px">
-        <button type="submit" class="check" url="{% url 'tab_reception' %}">Valider les quantités livrées</button>
+        <button type="submit" class="check" url="{% url 'order:tab_reception' %}">Valider les quantités livrées</button>
     </div>
     {% endif %}
     
@@ -71,7 +71,7 @@
                             <input type="checkbox" name="action_{{item.id}}" />
                         </td>
                         <td>
-                            <a href="{% url 'orderitem_delete' item.id %}?next=tab_reception_local_provider" class="trash confirmDel no-text"></a>
+                            <a href="{% url 'order:item_delete' item.id %}?next=tab_reception_local_provider" class="trash confirmDel no-text"></a>
                         </td>
                     {% endif %}
                 </tr>
