--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -10,12 +10,12 @@
 
 {% block header %}
 <div class="btn_wrapper">
-  <a href="{% url 'product_delete' product.id %}" class="btn_big">
+  <a href="{% url 'product:delete' product.id %}" class="btn_big">
     <img src="{% static 'img/icons/cross.png' %}" />Supprimer ce produit
   </a>
 </div>
 <div class="btn_wrapper">
-  <a href="{% url 'attachments:new' %}?object_id={{product.id}}&content_type={{product_type}}&next={% url 'product_item' product.id %}" class="btn_big">
+  <a href="{% url 'attachments:new' %}?object_id={{product.id}}&content_type={{product_type}}&next={% url 'product:item' product.id %}" class="btn_big">
     <img src="{% static 'img/icons/attach.png' %}" />Ajouter une pièce jointe
   </a>
 </div>
@@ -30,7 +30,7 @@
 	{% include "attachments/show.html" %}
 {% endwith %}
 
-<form action="{% url 'product_item' product.id %}" method="post">{% csrf_token %}
+<form action="{% url 'product:item' product.id %}" method="post">{% csrf_token %}
 	<input type="hidden" name="provider" value="{{ product.provider.id }}" />
 	<input type="hidden" name="url_args" value="{{url_args}}" />
 	<h3>Edition</h3>
@@ -38,7 +38,7 @@
     {% include 'product/form.html' %}
 	
 	<button type="submit" class="check">Valider</button>
-	<a href="{% url 'product_index' %}?{{url_args}}" class="back">Retour</a>
+	<a href="{% url 'product:list' %}?{{url_args}}" class="back">Retour</a>
 </form>
 
 {% endblock %}
