--- a/templates/team/item.html
+++ b/templates/team/item.html
@@ -5,7 +5,7 @@
 {% block header %}Modification d'équipe{% endblock %}
 
 {% block content %}
-<form action="{% url 'team_item' team.id %}" method="post">{% csrf_token %}
+<form action="{% url 'team:item' team.id %}" method="post">{% csrf_token %}
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
     </p>
