update url to login

--- a/templates/member/form.html
+++ b/templates/member/form.html
@@ -49,7 +49,7 @@
 			</form>
 		</div>
 		<div id="footer">
-			<a href="{% url 'django.contrib.auth.views.login' %}">>> Retour à la page de connexion</a>
+			<a href="{% url 'login' %}">>> Retour à la page de connexion</a>
 		</div>
 	</div>
 </div>
